--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2010-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* fonts/Khottabun.sfd:
+	  - Adjust some spline points for LOW CA, LOW SA, LOW RATHA, HIGH TA.
+
+2010-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* First created the project.
 
