--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2010-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Add StdHW, StemSnapH, StdVW, StemSnapV.
+
+2010-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Normalize LOW PHA.
 
 2010-12-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
