* fonts/Khottabun.sfd: 	  - Re-adjust NGA, HIGH CA.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2011-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Re-adjust NGA, HIGH CA.
+
+2011-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Re-adjust HIGH KA, HIGH KHA, LOW KHA.
 	  - Remove tip-cut spline from LOW KA background layer, not needed.
 	  - Ditto for HIGH KA, HIGH KHA, LOW KHA.
