* fonts/Khottabun.sfd: 	  - Re-adjust NYA, RATA, HIGH RATHA, DA.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
+	  - Re-adjust NYA, RATA, HIGH RATHA, DA.
+
 2011-01-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
