--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2011-01-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Normalize subjoined LOW PA, subjoined LOW PHA, subjoined MA,
+	    subjoined LOW YA.
+
+2011-01-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Normalize subjoined BA, subjoined HIGH PA, subjoined HIGH PHA.
 
 2011-01-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>
