--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
+	  - Normalize subjoined WA, subjoined HIGH SHA, subjoined HIGH SA,
+	    subjoined HIGH HA, vowel OA BELOW (+ subjoined A).
+
 2011-01-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
