--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-01-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
+	  - Add a right-side stroke to subjoined HIGH SA.
+	  - Redraw subjoined LOW THA to have sharp tips rather than rounded.
+	  - Round splines to int, as they are apparently rewritten with
+	    non-integer values in some previous fontforge version.
+
 2011-01-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
