--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2011-01-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Add glyph for space.
+	  - Correct glyph for subjoined BA.
+
+2011-01-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Normalize ligature NAA (uni1A36.uni1A63),
 	    ligature WAA (uni1A45.uni1A64), ligature NYA-NYA (uni1A2C.uni1A2C).
 
