--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2011-02-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Really add 'mkmk' GPOS lookups (the previous commit didn't).
+	  - Add AboveMark and BelowMark anchors to glyphs.
+
+2011-02-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Add 'mark' and 'mkmk' GPOS lookups, with anchor classes
 	    AboveBase, BelowBase, AboveMark, BelowMark.
 	  - Add AboveBase and BelowBase anchors to glyphs, shifting some
