--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-02-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
+	  - Normalize Thai Noi (Lao) BO, PO, PHO SUNG, Fo Sung, PHO TAM,
+	    Fo Tam, MO, Ro Rot.
+	  - Adjust tail for Thai Noi (Lao) NO using stem from BO.
+
 2011-02-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
