* fonts/Khottabun.sfd: 	  - Normalize Thai Noi (Lao) Lo Ling, WO, SO SUNG.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-02-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
+	  - Normalize Thai Noi (Lao) Lo Ling, WO, SO SUNG.
+
 2011-02-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
