* fonts/Khottabun.sfd: 	  - Normalize Thai Noi (Lao) DIGIT ZERO, DIGIT ONE, DIGIT TWO, 	    DIGIT THREE, DIGIT FOUR, DIGIT FIVE.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2011-02-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Normalize Thai Noi (Lao) DIGIT ZERO, DIGIT ONE, DIGIT TWO,
+	    DIGIT THREE, DIGIT FOUR, DIGIT FIVE.
+
+2011-02-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Normalize Thai Noi (Lao) HO NO, HO MO, Clustering Mo,
 	    Clustering Lo.
 
