--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-07-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	Begin precomposed reordering GSUB changes.
+
+	* fonts/Khottabun.sfd:
+	  - Add "Precomposed reordering" lookup.
+	  - Add glyphs and ligature lookups for precomposed Cons + SARA E.
+
 2011-07-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
