--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2011-07-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* fonts/Khottabun.sfd:
+	  - Add glyphs and ligature lookups for precomposed Cons + VOWEL AE.
+
+2011-07-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	Begin precomposed reordering GSUB changes.
 
 	* fonts/Khottabun.sfd:
