* fonts/Khottabun.sfd: 	  - Add glyphs and ligature lookups for precomposed Cons + VOWEL AI 	    MAIMUAN.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2011-07-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Add glyphs and ligature lookups for precomposed Cons + VOWEL AI
+	    MAIMUAN.
+
+2011-07-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Add glyphs and ligature lookups for precomposed Cons + VOWEL O.
 
 2011-07-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
