--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 
 	* fonts/Khottabun.sfd:
 	  - Add glyphs and ligature lookups for precomposed Cons + VOWEL AI
+	    MAIMALAI.
+
+2011-07-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
+	  - Add glyphs and ligature lookups for precomposed Cons + VOWEL AI
 	    MAIMUAN.
 
 2011-07-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>
