--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2011-07-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Add glyphs and ligature lookups for precomposed Cons + MEDIAL RA.
+
+2011-07-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Add glyphs and ligature lookups for precomposed Cons + VOWEL AI
 	    MAIMALAI.
 
