--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2011-07-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Add GREAT SA and DOUBLE NYA to all consonant sets in GSUB rules.
+
+2011-07-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Add missing anchor for DOUBLE NYA ligature.
 	  - Fix direction for independent VOWEL UU.
 
