--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2011-07-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* fonts/Khottabun.sfd:
+	  - Add AboveMark Mark anchor to MAI KANG. (Sample: ปาปุณิํสุ)
+
+2011-07-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* fonts/Khottabun.sfd:
 	  - Add GREAT SA and DOUBLE NYA to all consonant sets in GSUB rules.
 
 2011-07-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
